--- a/templates/page/cmd.html.twig
+++ b/templates/page/cmd.html.twig
@@ -22,6 +22,7 @@
                 <th>Client</th>
                 <th>Mois de </th>
                 <th>Crée le</th>
+                <th>pay</th>
                 </tr>
             </thead>
             <tbody>
@@ -39,6 +40,14 @@
                     <td>{{ facture.client }}</td>
                     <td>{{ facture.factPeriod | date('m/Y') }}</td>
                     <td>{{ facture.createdAt | date('d/m/Y') }}</td>
+                    <td><kkiapay-widget amount="<300>" 
+                                        key="c1faa8c074c511e99b87b57029db1662"
+                                        url="<url-vers-votre-logo>"
+                                        position="center"
+                                        callback="{{ path('cmd') }}"
+                                        src="https:/cdn.kkiapay.me/k.js">
+                        </kkiapay-widget>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
