--- a/templates/page/sbee.html.twig
+++ b/templates/page/sbee.html.twig
@@ -1,19 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% form_theme forms 'bootstrap_4_layout.html.twig' %}
 
 {% block body %}
     
-    {# <fieldset>
-        <div class="form-group">
-            <select class="custom-select">
-                <option selected="">Choisissez le type de compteur</option>
-                <option value="1">Ordinaire</option>
-                <option value="2">Prepaye</option>
-                <option value="3">A carte</option>
-            </select>
-        </div>
-    </fieldset> #}
+    
     <br><hr><br>
     <h2>Les informations demandees ici sont presentes sur vos factures</h2>
     <h1>VEUILLEZ BIEN REMPLIR LES CASES SUIVANTES</h1>
@@ -21,11 +11,35 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore libero vel quo omnis excepturi fugit consequuntur dolore eos dolor, quae reiciendis beatae aspernatur aperiam. Ratione sit error reprehenderit quisquam eum.</p>
     <p>Fugiat, dolor dolores! Nulla quaerat facilis itaque dicta ullam ut iusto! Earum laboriosam id, iste dicta quam commodi harum expedita quis sequi suscipit pariatur nam inventore nihil unde illo voluptatem?</p>   
 
-    {{ form_start(forms) }}
-
-    {{ form_widget(forms) }}
-    <button type="sumbit" class="btn btn-success">Envoyer</button>
-
-    {{ form_end(forms) }}
+    <form method="post">
+ 
+        <h1 class="h3 mb-3 font-weight-normal">Payer facture</h1>
+        <fieldset>
+            <div class="form-group">
+                <label for="inputCompteur">Type de compteur</label>
+                <select class="form-control" id="inputCompteur">
+                    <option value="soneb">SONEB</option>
+                    <option value="sbee ordinaire">SBEE(Ordinaire)</option>
+                    <option value="sbee prepaye">SBEE(Prepaye)</option>
+                    <option value="sbee carte">SBEE(A carte)</option>
+                </select>
+            </div>
+        </fieldset>
+        <div class="form-group">
+            <label for="inputPolice">Numero Police</label>
+            <input type="text" name="numero_police" id="inputPolice" class="form-control" placeholder="Numero police" required>
+        </div>
+        <div class="form-group">
+            <label for="montant">Montant</label>
+            <input type="" name="montant" id="montant" class="form-control" placeholder="Montant" required>
+        </div>
+        <div class="form-group">
+            <label for="inputemail">Adresse email</label>
+            <input type="email" class="form-control" id="inputemail" aria-describedby="emailHelp" placeholder="Entrer votre email">
+            <small id="emailHelp" class="form-text text-muted">Vos informations sont en sécurité</small>
+        </div>
+ 
+        <button type="sumbit" class="btn btn-success">Envoyer</button>
+    </form>
 
 {% endblock %}
