--- a/templates/register/reset_password.html.twig
+++ b/templates/register/reset_password.html.twig
@@ -11,7 +11,7 @@
         <input type="hidden" name="token" value="{{ token }}">
  
         <button class="btn btn-lg btn-primary" type="submit">
-            Register
+            Changer
         </button>
     </form>
 {% endblock %}
