--- a/templates/email/registration.html.twig
+++ b/templates/email/registration.html.twig
@@ -4,5 +4,5 @@ Salut {{ username }}! Votre enregistrement fut un succes sur notre application.
 
 Pour vous connecter, aller sur <a href="{{ url('login') }}">PaiementEnLigne</a>.
 
-Merci!
+Merci a toi!
 
